# TatlinTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  algorithm.md
src/: CMakeLists.txt  main.cpp
src/data/: latency.conf  latency.txt
src/include/: Processer.h  Tape.h  TapePool.h
src/processer/: CMakeLists.txt  Processer.cpp
src/tape/: CMakeLists.txt  Tape.cpp
src/tape_pool/: CMakeLists.txt  TapePool.cpp  tape_pool.cpp
tests/: CMakeLists.txt  ProcesserTests.cpp  TapeTests.cpp  main.cpp
tests/data/input/: latencies.conf
